# stats-service

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  app.json  app.py  contributors.py  crowdin.yml  docker-compose.yml  entrypoint.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-doc.txt  requirements.txt  runserver.py  wait-for-postgres.sh  webserver.wsgi.sample
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  docker-ghcr.yml  docker-publish.yml  dockerimage.yml  pre-commit.yaml  python-publish.yml  pythonapp.yml  update-contributors.yml
contrib/: check_update.sh  create_client.sh  create_new_client.sh  install.sh  set_env_vars.sh  update.sh
docs/: admin.rst  api-v1.rst  api-v2.rst  architecture.rst  blueprints.rst  command-line-interface.rst  conf.py  deployment.rst  index.rst  installation.rst  logging.rst  map.rst  modules.rst  root.rst  stats.rst  swagger.json  updates.md  updates.rst
docs/_static/: architecture-stats-organization-level.dia  architecture-stats-scenario1.dia  architecture-stats-scenario2.dia  architecture-stats-scenario3.dia  architecture-stats-scenario4.dia  architecture-stats.dia
docs/_templates/: versioning.html
etc/apache/sites-available/: stats-service.conf.sample
etc/apache/wsgi/: webserver.wsgi.sample
etc/systemd/system/: statsservice.service.sample
instance/: config.py  docker.py  heroku.py  production.py  production.py.cfg
migrations/: env.py
migrations/versions/: 71bb20af690a_added_new_latitude_longitude_columns_.py  b5013a08ce19_add_column_is_sharing_enabled_to_client_.py
statsapi/: bootstrap.py  commands.py
statsapi/api/v1/: __init__.py  common.py  organization.py  stats.py
statsapi/api/v2/: stats.py
statsapi/commands/: __init__.py  database.py  organization.py  pull.py  push.py
statsapi/documents/: organization.py  stats.py
statsapi/views/: __init__.py
statsservice/: __init__.py  bootstrap.py
statsservice/api/v1/: __init__.py  client.py  common.py  identity.py  organization.py  processed.py  processing.py  stats.py
statsservice/api/v2/: __init__.py  common.py  organization.py  stats.py
statsservice/commands/: __init__.py  client.py  database.py  mosp.py  organization.py  pull.py  push.py  stats.py
statsservice/documents/: __init__.py  organization.py  stats.py
statsservice/lib/: __init__.py  mosp.py  postprocessors.py  processors.py  stats.py  utils.py  validation.py
statsservice/models/: __init__.py  client.py  organization.py  stats.py
statsservice/static/css/: custom.css
statsservice/static/img/: stats-service-logo.xcf
statsservice/static/js/: evolutionCharts.js  map.js  risksCharts.js  threatsCharts.js  utils.js  vulnerabilitiesCharts.js
statsservice/templates/: about.html  about_more.html  dashboard-test.html  evolution.html  help.html  human.txt  index.html  layout.html  map.html  security.txt  stats-async.html  stats.html
statsservice/translations/: extract.sh  messages.pot
statsservice/translations/fr_FR/LC_MESSAGES/: messages.po
statsservice/views/: __init__.py  admin.py  common.py  map.py  root.py  stats.py
tests/: conftest.py  test_client.py
tools/: gen_changelog.py
