[tool.poetry]
name = "statsservice"
version = "0.5.3"
description = "Stats Service for MONARC."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/monarc-project/stats-service"
repository = "https://github.com/monarc-project/stats-service"
documentation = "https://www.monarc.lu/documentation/stats-service"

keywords = ["monarc", "security", "stats", "flask", "api"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "app.py"
]

packages = [
    { include = "statsservice" },
    { include = "instance" },
]

[tool.poetry.scripts]
monarc-stats-service = "app:run"
monarc-stats-service-client-create = "statsservice.commands.client:client_create"
monarc-stats-service-client-list = "statsservice.commands.client:client_list"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = "^2.0.2"
werkzeug = "3.0.1"
requests = "^2.31.0"
flask_restx = "^1.3.0"
jsonschema = "^3.2.0"
Flask-SQLAlchemy = "^3.0.3"
psycopg2-binary = "^2.9.9"
Flask-Principal = "^0.4.0"
flask_login = "^0.6.1"
Flask-Babel = "^2.0.0"
alembic = "^1.13.0"
Flask-Migrate = "^4.0.5"
pymosp = "^0.4.2"
packaging = "^23.2"
python-dateutil = "^2.8.2"
mypy = "^0.950"
typing-extensions = "^4.2.0"
types-requests = "^2.31.0.10"
types-python-dateutil = "^2.8.19.14"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
gitchangelog = "^3.0.4"
sphinx-multiversion = "^0.2.4"
pre-commit = "^2.19.0"
black = "^22.3.0"
pyupgrade = "^2.32.1"
reorder-python-imports = "^3.1.0"
sphinx-book-theme = "^0.3.2"
sphinx-autodoc-typehints = "^1.18.3"
pip-audit = "^2.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "migrations|docs|statsservice/commands"
